--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,48 @@ li img {
     width: 15px;
 
 }
+section.input{
+    display:inline;
+    justify-content: center;
+    overflow: hidden;
+    
+}
+input[type=text], button{
+    display: inline-block;
+    box-sizing: border-box;
+}
+input[type=text]{
+    padding: 1rem 1rem;
+    /* border:none; */
+    width: 50%;
+    margin-top:3rem;
+    margin-left: 8rem;
+    
+}
+input[type=text]:focus{
+   
+    outline:none;
+    border:none;
+    
+    
+}
+button{
+    -webkit-appearance: none;
+    border-radius: 0;
+    /* left:0; */
+    height:56px;
+    font-size: 17px;
+    padding: 14px 29px;
+    background:#232426;
+    border:none;
+    color:white;
+
+
+}
+button:hover{
+    background:black;
+    
+}
 /* .ara{
     width: 1100px;
 
