--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,8 @@ section.input{
 input[type=text], button{
     display: inline-block;
     box-sizing: border-box;
+    height:3rem;
+    align-items: center;
 }
 input[type=text]{
     padding: 1rem 1rem;
@@ -218,9 +220,9 @@ button{
     -webkit-appearance: none;
     border-radius: 0;
     /* left:0; */
-    height:56px;
+    /* height:56px; */
     font-size: 17px;
-    padding: 14px 29px;
+    padding: 0.5rem 1rem;
     background:#232426;
     border:none;
     color:white;
@@ -229,8 +231,34 @@ button{
 }
 button:hover{
     background:black;
+    cursor: pointer;
     
 }
+
+.text{
+    margin-top:4rem ;
+    margin-right: 20rem;
+    text-align: center;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* .ara{
     width: 1100px;
 
